--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pemilu Visualized</title>
+    <title>Pemilu Kawal</title>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="author" content="Haries Ramdhani">
     <meta name="description" content="An interactive data visualization of the result of Indonesia's recent election built using D3.js and Pemilu API">
